# drawing-takeoff

./: .gitignore  DESIGN_BUCKETING.md  DESIGN_COUNTS.md  IMPLEMENTATION_PLAN.md  KICKOFF.md  README.md  pyproject.toml  requirements.txt
src/drawing_takeoff/: __init__.py  client.py  count.py  diagnose.py  discipline.py  export.py  geometry.py  gui.py  legend.py  measure.py  models.py  pipeline.py  scale.py
src/drawing_takeoff/core/: __init__.py  api_config.py  api_key_store.py  app_paths.py  pricing.py  tokenizer.py
tests/: conftest.py  test_api_config.py  test_count.py  test_counts_pipeline.py  test_diagnose.py  test_discipline.py  test_export.py  test_geometry.py  test_legend.py  test_measure.py  test_pipeline.py  test_scale.py  test_smoke.py
tests/fixtures/: __init__.py  fake_anthropic.py
